# Game_Server

./: README.md
DummyClient/: CMonster.h  CObject.cpp  CObject.h  CPlayer.cpp  CPlayer.h  ClientSession.cpp  ClientSession.h  DummyClient.cpp  DummyClient.vcxproj  DummyClient.vcxproj.filters  Enum.pb.cc  Protocol.pb.cc  Protocol.pb.h  RandomMove.cpp  RandomMove.h  ServerPacketHandler.cpp  ServerPacketHandler.h  Struct.pb.cc  Struct.pb.h  pch.h
GameServer/: CBattle.cpp  CBattle.h  CMakeLists.txt  CMonster.cpp  CMonster.h  CObject.cpp  CObject.h  CPlayerManager.cpp  CPlayerManager.h  CSector.cpp  CSector.h  CZone.cpp  CZone.h  CZone_Manager.cpp  CZone_Manager.h  ClientPacketHandler.cpp  ClientPacketHandler.h  ConsoleMapViewer.cpp  ConsoleMapViewer.h  CouchbaseClient.cpp  CouchbaseClient.h  CouchbaseHandler.cpp  CouchbaseHandler.h  Enum.pb.h  GameServer.cpp  GameServer.vcxproj  GameServer.vcxproj.filters  GameSession.cpp  GameSession.h  Player.cpp  Player.h  Protocol.pb.cc  Protocol.pb.h  Room.cpp  Struct.pb.cc  Struct.pb.h  ZoneWorkerThread.cpp  ZoneWorkerThread.h  pch.h
ServerCore/: CSingleton.h  ConsoleMapViewer.cpp  ConsoleMapViewer.h  CoreGlobal.cpp  CoreGlobal.h  CoreMacro.h  CorePch.h  CoreTLS.cpp  CoreTLS.h  Dev_define.h  Enum.h  GLockFreeQueue.cpp  GLockFreeQueue.h  GlobalQueue.cpp  GlobalQueue.h  IocpCore.cpp  Job.h  JobQueue.cpp  JobQueue.h  JobTimer.cpp  JobTimer.h  Lock.cpp  LockFreeQueue.h  RandomMove.cpp  RandomMove.h  SendBuffer.cpp  SendBuffer.h  ServerCore.vcxproj  ServerCore.vcxproj.filters  Service.cpp  Service.h  Session.cpp  Session.h  Struct.h  (+4 more)
(+14 files in other folders)
